Implementation of a network element impact and a modification result (#352)
Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>